# LearnCUDAttention

./: .gitignore  CMakeLists.txt  README.md  attention.c  attention.cu  attention.py  common.h
C_matrix_multiplication/: 2Dmultiply.c  2Dmultiply.py
C_matrix_multiplication/3Dmultiplication/: 3Dmultiply.c  3Dmultiply.py
C_matrix_multiplication/3DmultiplicationWithMultiHead/: 3DmultiplicationWithMultiHead.c  3DmultiplicationWithMultiHead.py
